css/style.css
*{

}
html{
  overflow: none;
}
  ::-webkit-scrollbar {
    width: 12px;

  }
body{
  background-image: url("http://static1.squarespace.com/static/55b61839e4b04e39fb625165/t/55b692e9e4b0b4cd5d2f9c47/1438028524658/background.jpg?format=2500w");
  background-size: cover;
  opacity: 0.85;
  width: 100%;
  height: 100%;
}
.container-fluid{
  overflow: scroll;
}
.jumbotron h1 {
    font-size: 35px;
    color: white;
    text-shadow: -2px -2px 0 black, 2px -2px 0 black, -2px 2px 0 black, 2px 2px 0 black;
}
 .jumbotron {
    font-size: 21px;
    font-weight: 200;
    text-align: center;
    margin-bottom: 4%;
    margin-top: 4%;
    line-height: 2.1428571435;
    color: inherit;
    opacity: .8;
    background: url(https://static1.squarespace.com/static/563d2e92e4b07df2a1051884/t/578780258419c2bff4a5517d/1468549319287/UFC-BKGD.jpg?format=1500w) no-repeat center center;
    -webkit-box-shadow: 3px 3px 9px 12px black;  /* Safari 3-4, iOS 4.0.2 - 4.2, Android 2.3+ */
    -moz-box-shadow:    3px 3px 9px 12px black;  /* Firefox 3.5 - 3.6 */
    box-shadow:         3px 3px 9px 12px black;  /* Opera 10.5, IE 9, Firefox 4+, Chrome 6+, iOS 5 */
    /* background-color: green; */
}
.jumbotron:hover {
   font-size: 21px;
   text-align: center;
   margin-bottom: 4%;
   font-weight: 200;
   margin-top: 4%;
   line-height: 2.1428571435;
   color: inherit;
   opacity: .8;
   background: url(https://static1.squarespace.com/static/563d2e92e4b07df2a1051884/t/578780258419c2bff4a5517d/1468549319287/UFC-BKGD.jpg?format=1500w) no-repeat center center;
   -webkit-box-shadow: 3px 3px 9px 12px black;  /* Safari 3-4, iOS 4.0.2 - 4.2, Android 2.3+ */
   -moz-box-shadow:    3px 3px 9px 12px black;  /* Firefox 3.5 - 3.6 */
   box-shadow:         3px 3px 9px 12px black;  /* Opera 10.5, IE 9, Firefox 4+, Chrome 6+, iOS 5 */
}
img#welcome{
  width: 100%;
  height 300pc;
}
h4#by{
  font-size: 25px;
  font-family: 'Allerta Stencil', sans-serif;
  color: white;
  text-shadow: -2px -2px 0 black, 2px -2px 0 black, -2px 2px 0 black, 2px 2px 0 black;
}
img#counter{
  height: 35px;
  width: 35px;
  border: 2px groove black;

}
img#counter:hover{
  height: 35px;
  width: 35px;
  border: none;
  box-shadow: none;
}
#blood{
  width: 160px;
  height: 60px;
  margin-top: 1%;
  position: absolute;
  border: none;
}
#blood:hover{
  width: 160px;
  height: 60px;
  margin-top: 1%;
  position: absolute;
  border: none;
  box-shadow: none;
}
#dvLoading{
  background: #53346D url(http://i.giphy.com/ihRk2wHfTQD72.gif) no-repeat center center;
  opacity: .9;
  height: 100%;
  width: 100%;
  position: fixed;
  z-index: 1000;
}
#logo16{
  height: 100px;
  width: 120px;
  margin-left: 2%;
  border: none;
}
#logo16:hover{
  height: 120px;
  width: 140px;
  margin-left: 2%;
  box-shadow: none;
  border: none;
}
:-webkit-scrollbar {
    width: 12px;

}
::-webkit-scrollbar-track {
    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
    -webkit-border-radius: 10px;
    border-radius: 10px;
    color: red !important;
    background: red !important;
    border: 1px groove black;
    -webkit-box-shadow: 3px 3px 5px 5px black;  /* Safari 3-4, iOS 4.0.2 - 4.2, Android 2.3+ */
    -moz-box-shadow:    3px 3px 5px 5px black;  /* Firefox 3.5 - 3.6 */
    box-shadow:         3px 3px 5px 5px black;  /* Opera 10.5, IE 9, Firefox 4+, Chrome 6+, iOS 5 */
}
::-webkit-scrollbar-thumb {
    -webkit-border-radius: 10px;
    border-radius: 10px;

    background: black !important;
    border-color: black !important;
    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5);
}
::-webkit-scrollbar-thumb:window-inactive {
  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
  -webkit-border-radius: 10px;
  border-radius: 10px;
  color: white !important;
  background: black !important;
}
.partial{
  padding: 2px;
}
.img-circle {
    border-radius: 50%;
    margin-top: -5%;
    border: black;

}
.img-circle:hover {
    border-radius: 80% !important;
    margin-top: -5%;
    border: black;
    box-shadow: none; 
}
.navbar-default {
    background: -webkit-linear-gradient(bottom, red, black) !important;
    background: linear-gradient(to top, black,  red) !important;
    border-color: black;
    width: 100%;
    opacity: .6;
    position: fixed;
    top:0;
    margin-right: 4%;
    z-index: 1000;
}
.navbar-default:hover {
  background: -webkit-linear-gradient(bottom, red, black) !important;
  background: linear-gradient(to top, black,  red) !important;
  border-color: black;
  width: 100%;
  opacity: .9;
  position: fixed;
  top:0;
  margin-right: 4%;
  z-index: 1000;

}
.navbar-default:focus {
  background: -webkit-linear-gradient(bottom, red, black) !important;
  background: linear-gradient(to top, black,  red) !important;
  border-color: black;
  width: 100%;
  opacity: .9;
  position: fixed;
  top:0;
  margin-right: 4%;
  z-index: 1000;

}

.navbar-brand {
    position: absolute;
    width: 100px;
    height: 100px;
    left: 50%;
    right: 50%;
    text-align: center;
    margin: auto;
}
.navbar-default .navbar-nav>li>a {
    color: white;
    font-size: 14px;
}
.navbar-default .navbar-nav>li>a:hover {
    color: white;
    font-size: 16px;
}
.navbar-default .navbar-nav>li>a:focus {
    color: white;
    font-size: 16px;
}
.navbar-default .navbar-toggle {
    border: 1px solid black;

}
.navbar-default .navbar-toggle .icon-bar {
    background-color: black;
}
.navbar-default .navbar-toggle:hover {
    border: 2px groove black;
    color: red;
    background: black;
    background-color: red;
}
.navbar-default .navbar-toggle:focus {
    border: 2px groove black;
    color: red;
    background-color: red;
}
.navbar-default .navbar-toggle .icon-bar:focus {
    background-color: red;
}
.navbar-toggle {
    z-index:3;
}
section
{
  background:yellow;
}
/* ... */

